changes made in db routes , cookies implementation , frontend test auth

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,15 @@
   },
   "dependencies": {
     "@aashishk17/medium-common": "^1.0.1",
-    "@prisma/client": "^5.12.0",
     "@prisma/extension-accelerate": "^1.0.0",
-    "hono": "^4.2.1",
-    "prisma": "^5.12.0"
+    "hono": "^4.2.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240208.0",
+    "@prisma/client": "^5.12.1",
+    "i": "^0.3.7",
+    "npm": "^10.5.2",
+    "prisma": "^5.12.1",
     "wrangler": "^3.32.0"
   }
 }
