--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,7 +10,8 @@
 			"@components/*": ["./src/components/*"],
 			"@hooks/*": ["./src/hooks/*"],
 			"@pages/*": ["./src/pages/*"],
-			"@service/*": ["./src/service/*"]
+			"@service/*": ["./src/service/*"],
+			"@utils/*": ["./src/utils/*"]
 		},
 
 		/* Bundler mode */
