--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@aashishk17/medium-common": "^1.0.1",
     "@tanstack/react-form": "^0.19.2",
     "@tanstack/react-query": "^5.31.0",
+    "@tinymce/tinymce-react": "^5.0.1",
     "axios": "^1.6.8",
+    "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
