--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
-    "sonner": "^1.4.41"
+    "sonner": "^1.4.41",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.31.0",
