--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -11,6 +11,8 @@ node_modules
 dist
 dist-ssr
 *.local
+# ... other rules omitted for brevity ...
+/public/tinymce/
 
 # Editor directories and files
 .vscode/*
