--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@aashishk17/medium-common": "^1.0.3",
-    "@tanstack/react-form": "^0.19.2",
-    "@tanstack/react-query": "^5.31.0",
-    "@tinymce/tinymce-react": "^5.0.1",
-    "axios": "^1.6.8",
-    "html-react-parser": "^5.1.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.1.0",
-    "react-router-dom": "^6.22.3",
-    "react-spinners": "^0.13.8",
-    "sonner": "^1.4.41"
-  },
-  "devDependencies": {
-    "@tanstack/react-query-devtools": "^5.31.0",
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  }
+	"name": "frontend",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"postinstall": "node ./postinstall.js"
+	},
+	"dependencies": {
+		"@aashishk17/medium-common": "^1.0.3",
+		"@tanstack/react-form": "^0.19.2",
+		"@tanstack/react-query": "^5.31.0",
+		"@tinymce/tinymce-react": "^5.0.1",
+		"axios": "^1.6.8",
+		"fs-extra": "^11.2.0",
+		"html-react-parser": "^5.1.10",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^5.1.0",
+		"react-router-dom": "^6.22.3",
+		"react-spinners": "^0.13.8",
+		"sonner": "^1.4.41",
+		"tinymce": "^7.0.1"
+	},
+	"devDependencies": {
+		"@tanstack/react-query-devtools": "^5.31.0",
+		"@types/node": "^20.12.7",
+		"@types/react": "^18.2.66",
+		"@types/react-dom": "^18.2.22",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.6",
+		"postcss": "^8.4.38",
+		"tailwindcss": "^3.4.3",
+		"typescript": "^5.2.2",
+		"vite": "^5.2.0"
+	}
 }
