--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
 		"@tanstack/react-query": "^5.31.0",
 		"@tinymce/tinymce-react": "^5.0.1",
 		"axios": "^1.6.8",
+		"clsx": "^2.1.1",
+		"framer-motion": "^11.1.7",
 		"fs-extra": "^11.2.0",
 		"html-react-parser": "^5.1.10",
 		"react": "^18.2.0",
@@ -24,7 +26,9 @@
 		"react-router-dom": "^6.22.3",
 		"react-spinners": "^0.13.8",
 		"sonner": "^1.4.41",
-		"tinymce": "^7.0.1"
+		"tailwind-merge": "^2.3.0",
+		"tinymce": "^7.0.1",
+		"vite-tsconfig-paths": "^4.3.2"
 	},
 	"devDependencies": {
 		"@tanstack/react-query-devtools": "^5.31.0",
