--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,6 +6,11 @@
 		"module": "ESNext",
 		"skipLibCheck": true,
 		"paths": {
+			"@assets/*": ["./src/assets/*"],
+			"@components/*": ["./src/components/*"],
+			"@hooks/*": ["./src/hooks/*"],
+			"@pages/*": ["./src/pages/*"],
+			"@service/*": ["./src/service/*"],
 			"@utils/*": ["./src/utils/*"]
 		},
 
