--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
 	},
 	"dependencies": {
 		"@aashishk17/medium-common": "^1.0.3",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-icons": "^1.3.0",
 		"@tanstack/react-form": "^0.19.2",
 		"@tanstack/react-query": "^5.31.0",
 		"@tinymce/tinymce-react": "^5.0.1",
 		"axios": "^1.6.8",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.1.7",
 		"fs-extra": "^11.2.0",
@@ -27,6 +30,7 @@
 		"react-spinners": "^0.13.8",
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.3.0",
+		"tailwindcss-animate": "^1.0.7",
 		"tinymce": "^7.0.1",
 		"vite-tsconfig-paths": "^4.3.2"
 	},
