--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 		"@tanstack/react-form": "^0.19.2",
 		"@tanstack/react-query": "^5.31.0",
 		"@tinymce/tinymce-react": "^5.0.1",
+		"@vercel/analytics": "^1.2.2",
 		"axios": "^1.6.8",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
